--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <!-- container -->
-    <div class="container-fluid p-3">
+    <div class="container-fluid p-4">
       <div class="row display-flex justify-content-center">
            <!--nav dropdown -->
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
@@ -79,12 +79,12 @@
       </div>
       <!-- BOTONES CAMBIO MOSAICO -->
       <div class="galery">
-        <ul class="nav nav-tabs" id="myTab" role="tablist" style="justify-content: center;">
+        <ul class="nav nav-tabs border border-0" id="myTab" role="tablist" style="justify-content: center;">
           <li class="nav-item" role="presentation">
-            <button class="nav-link active" id="grid-container-tab" data-bs-toggle="tab" data-bs-target="#grid-container" type="button" role="tab" aria-selected="true"><i class="fa-solid fa-table-cells"></i>
+            <button class="nav-link border border-0 active" id="grid-container-tab" data-bs-toggle="tab" data-bs-target="#grid-container" type="button" role="tab" aria-selected="true"><i class="fa-solid fa-table-cells"></i></button>
           </li>
           <li class="nav-item" role="presentation">
-            <button class="nav-link" id="vertical-container-tab" data-bs-toggle="tab" data-bs-target="#vertical-container" type="button" role="tab" aria-selected="false"><i class="fa-solid fa-square"></i></button>
+            <button class="nav-link border border-0" id="vertical-container-tab" data-bs-toggle="tab" data-bs-target="#vertical-container" type="button" role="tab" aria-selected="false"><i class="fa-solid fa-square"></i></button>
           </li>
         </ul>
         <div class="tab-content" id="myTabContent">
@@ -116,51 +116,69 @@
             </div>
           </div>
           <!-- CONTENEDOR VERTICAL -->
-          <div class="tab-pane" id="vertical-container" role="tabpanel" aria-labelledby="container-col-tab">
+          <div class="tab-pane gap-3 d-grid p-3" id="vertical-container" role="tabpanel" aria-labelledby="vertical-container-tab">
             <div class="card" style="width: 40rem; justify-content: center; margin: auto">
-              <h2>Studying like never before</h2>
+              <div class="d-flex p-2">
+                <h2 class="w-75">Studying like never before</h2>
+                <span class="fw w-25 text-end">12/13</span>
+              </div>
               <img src="img/img1.jpg" alt="Galeria Imagen" style="width: 100%; height: 400px;">
-              <div class="card-body" p-4 m-3>
+              <div class="card-body p-2">
                 <h5 class="card-title">26985 Likes</h5> 
                 <p class="card-text">This is an example of a very good photo that yoy can post on Instagram </p>
               </div>
             </div>
             <div class="card" style="width: 40rem; justify-content: center; margin: auto;">
-              <h2>Neuron explosion</h2>
+              <div class="d-flex p-2">
+                <h2 class="w-75">Neuron explosion</h2>
+                <span class="fw w-25 text-end">12/13</span>
+              </div>
               <img src="img/img2.jpg" alt="Galeria Imagen" style="width: 100%; height: 400px;">
-              <div class="card-body" style="padding: 2%;">
+              <div class="card-body p-2" style="padding: 5%;">
                 <h5 class="card-title">204 Likes</h5> 
                 <p class="card-text">This is an example of a very good photo that yoy can post on Instagram </p>
               </div>
             </div>
             <div class="card" style="width: 40rem; justify-content: center; margin: auto;">
-              <h2>Big heart</h2>
+              <div class="d-flex p-2">
+                <h2>Big heart</h2>
+                <span class="fw w-25 text-end">12/13</span>
+              </div>
               <img src="img/img3.jpg" alt="Galeria Imagen" style="width: 100%; height: 400px;">
-              <div class="card-body" p-2>
+              <div class="card-body p-2">
                 <h5 class="card-title">204 Likes</h5> 
                 <p class="card-text">This is an example of a very good photo that yoy can post on Instagram </p>
               </div>
             </div>
             <div class="card" style="width: 40rem; justify-content: center; margin: auto;">
-              <h2>The best landscape</h2>
+              <div class="d-flex p-2">
+                <h2>The best landscape</h2>
+                <span class="fw w-25 text-end">12/13</span>
+              </div>
               <img src="img/img4.jpg" alt="Galeria Imagen" w-100 h-400px>
-              <div class="card-body" p-2>
+              <div class="card-body p-2">
                 <h5 class="card-title">204 Likes</h5> 
                 <p class="card-text">This is an example of a very good photo that yoy can post on Instagram </p>
               </div>
             </div>
             <div class="card" style="width: 40rem; justify-content: center; margin: auto;">
-              <h2>The best sports in history!</h2>
+              <div class="d-flex p-2">
+                <h2>The best sports in history!</h2>
+                <span class="fw w-25 text-end">12/13</span>
+              </div>
               <img src="img/img5.jpg" alt="Galeria Imagen" style="width: 100%; height: 400px;">
-              <div class="card-body" style="padding: 2%;">
+              <div class="card-body p-2">
                 <h5 class="card-title">2578 Likes</h5> 
                 <p class="card-text">This is an example of a very good photo that yoy can post on Instagram </p>
               </div>
             </div>
             <div class="card" style="width: 40rem; justify-content: center; margin: auto;">
-              <h2>Blue wells</h2>
+              <div class="d-flex p-2">
+                <h2>Blue wells</h2>
+                <span class="fw w-25 text-end">12/13</span>
+              </div>
               <img src="img/img6.jpg" alt="Galeria Imagen" style="width: 100%; height: 400px;">
-              <div class="card-body" style="padding: 2%;">
+              <div class="card-body p-2">
                 <h5 class="card-title">3210 Likes</h5> 
                 <p class="card-text">This is an example of a very good photo that yoy can post on Instagram </p>
               </div>
